[package]
name = "test-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[dependencies]
ntex = { version = "0.6.7", features = ["tokio"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
